finally z-index fixed for pdf download icon; will move on to next phase now

--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,13 @@ navbar{
 }
 
 .floating-container{
-
   position: fixed;
-  width: 70px;
-  height: 70px;
+  width: 20px;
+  height: 20px;
   bottom: 30px;
   right: 30px;
-  z-index: 50px;
-
+  z-index: 100;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 
